--- a/src/styles.css
+++ b/src/styles.css
@@ -21,10 +21,9 @@ h1 {
   width: 55vw;
   margin: 20px;
   position: relative;
-  border: 1px solid #212121;
   padding: 16px;
   border-radius: 4px;
-  box-shadow: 0px 0px 6px 6px rgba(33, 33, 33, 0.6);
+  box-shadow: 0 8px 18px rgba(0, 0, 0, 0.25), 0 6px 10px rgba(0, 0, 0, 0.22);
 }
 
 .search-input {
